# decodingus

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  LICENSE  PROJECT_ANALYSIS.md  README.md  build.sbt  docker-compose.prod.yml  docker-compose.yml
conf/: routes  (+6 more)
rust/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  STATUS.md  compose.yaml
rust/crates/du-aging/: Cargo.toml
rust/crates/du-aging/src/: callable.rs  db.rs  main.rs
rust/crates/du-atproto/: Cargo.toml
rust/crates/du-atproto/src/: lib.rs  oauth.rs
rust/crates/du-bio/: Cargo.toml
rust/crates/du-bio/src/: lib.rs  vcf.rs
rust/crates/du-db/: Cargo.toml  build.rs
rust/crates/du-db/src/: age.rs  audit.rs  auth.rs  biosample.rs  change_set.rs  consent.rs  coverage.rs  dedup.rs  denovo.rs  discovery.rs  donor.rs  exchange.rs  fed_subject.rs  genome_region.rs  haplogroup.rs  ibd.rs  identifier.rs  job_lock.rs  lib.rs  merge.rs  naming.rs  notification.rs  pagination.rs  pdf.rs  proposal.rs  publication.rs  recruitment.rs  reputation.rs  research.rs  sequence.rs  sequencer.rs  snp_graft.rs  social.rs  str_import.rs  study.rs  support.rs  test_type.rs  testing.rs  tree_revision.rs  tree_sample.rs  (+4 more)
rust/crates/du-db/src/fed/: analytics.rs  core.rs  coverage.rs  device_key.rs  feed.rs  instrument_observation.rs  mod.rs  private_variant.rs  signed_request.rs  str_profile.rs
rust/crates/du-db/tests/: age_combine.rs  biosample_identifier.rs  change_set.rs  contig_benchmarks.rs  coverage_norms.rs  dedup_merge.rs  denovo.rs  device_key.rs  discovery_consensus.rs  donor_consolidation.rs  exchange.rs  fed_anchor_dedup.rs  fed_coverage.rs  fed_feed.rs  fed_reporting.rs  fed_subject_link.rs  haplogroup_naming.rs  ibd_attestation.rs  ibd_suggestions.rs  job_lock.rs  merge_e2e.rs  migrations.rs  notification.rs  projects.rs  publication_candidate.rs  pubmed_enrich.rs  queries.rs  recruitment.rs  recurrence_label.rs  rename_shorthand.rs  reputation.rs  research.rs  resolve_recurrence.rs  restructure.rs  sample_report.rs  scrub_recurrent.rs  sequencer.rs  sequencer_consensus.rs  social.rs  str_predict.rs  (+10 more)
rust/crates/du-domain/src/: biosample.rs  enums.rs  lib.rs  variant.rs
rust/crates/du-external/: Cargo.toml
rust/crates/du-external/src/: email.rs  ena.rs  error.rs  lib.rs  ncbi.rs  openalex.rs  secrets.rs
rust/crates/du-jobs/: Cargo.toml
rust/crates/du-jobs/src/: coord_lift.rs  crawl_project.rs  ena.rs  faidx.rs  ftdna_str.rs  gzio.rs  import_kit_identifiers.rs  jetstream.rs  main.rs  name_private_nodes.rs  publications.rs  scheduler.rs  topic_prune.rs  ybrowse.rs  yregions.rs
rust/crates/du-migrate/: Cargo.toml
rust/crates/du-migrate/src/: main.rs  reconcile.rs  transform.rs
rust/crates/du-web/: Cargo.toml
rust/crates/du-web/assets/: app.js  clade-geo.js  main.css  map.js  report.js  tree.js
rust/crates/du-web/src/: api.rs  auth.rs  error.rs  extract.rs  htmx.rs  i18n.rs  main.rs  oauth.rs  render.rs  routes.rs  security.rs  sig.rs  state.rs  tree_layout.rs
rust/crates/du-web/src/api/: dto.rs  mod.rs  tree.rs
rust/crates/du-web/src/routes/: auth_routes.rs  change_sets.rs  coverage.rs  curation.rs  curator.rs  curator_inbox.rs  curator_regions.rs  curator_variants.rs  dedup.rs  denovo_conflicts.rs  exchange.rs  ibd.rs  maps.rs  mod.rs  naming.rs  pages.rs  projects.rs  publications.rs  reconcile_flags.rs  recruitment.rs  recruitment_edge.rs  references.rs  research.rs  reviews.rs  samples.rs  sequencer.rs  social.rs  social_edge.rs  tree.rs  variants.rs  versioning.rs
rust/crates/du-web/templates/: base.html  index.html
rust/crates/du-web/templates/account/: profile.html
rust/crates/du-web/templates/auth/: login.html
rust/crates/du-web/templates/biosamples/: map.html
rust/crates/du-web/templates/coverage/: benchmarks.html  lab_rows.html  labs.html
rust/crates/du-web/templates/curator/: dashboard.html
rust/crates/du-web/templates/curator/announcements/: page.html
rust/crates/du-web/templates/references/: biosamples.html  list.html  page.html  sample_table.html  submit.html
rust/crates/du-web/templates/samples/: _pathway.html  _public_toggle.html  report.html
rust/crates/du-web/templates/social/: blocks.html  feed.html  messages.html  notifications.html  thread.html  threads_list.html
rust/crates/du-web/templates/static/: contact.html  page.html
rust/crates/du-web/templates/tree/: fragment.html  geo_panel.html  page.html  snp_sidebar.html  svg.html
rust/crates/du-web/templates/variants/: browser.html  detail.html  list.html
rust/docs/: atproto-edge-reply.md  atproto-oauth-findings.md  scala-vs-rust-diff.md  variant-name-reconcile-deploy.md
rust/locales/: en.txt  es.txt  fr.txt
rust/migrations/: 0001_foundation.sql  0002_core.sql  0003_tree.sql  0004_genomics.sql  0005_ident.sql  0006_pubs.sql  0007_ibd.sql  0008_fed.sql  0009_social_support_billing.sql  0010_audit.sql  0011_coverage_mirror.sql  0012_fed_reporting.sql  0013_str.sql  0014_str_age.sql  0015_haplogroup_backbone.sql  0016_variant_naming_authority.sql  0017_variant_evidence.sql  0018_ybrowse_mirror.sql  0019_variant_strand_canon.sql  0020_variant_indel_canon.sql  0021_ancestral_state.sql  0022_biosample_is_public.sql  0023_variant_defining_haplogroup.sql  0024_tree_revision.sql  0025_sequencer_instrument_lab.sql  0026_instrument_proposal_indexes.sql  0027_instrument_observation_lexicon.sql  0028_private_variant_mirror.sql  0029_discovery_consensus.sql  0030_test_type_coverage_norm.sql  0031_discovery_reliability.sql  0032_exchange.sql  0033_research.sql  0034_project_member.sql  0035_assertion.sql  0036_device_key.sql  0037_haplogroup_sample.sql  0038_seed_sequencer_labs.sql  0039_denovo_conflict.sql  0040_ibd_attestation_did.sql  (+28 more)
rust/scripts/: backfill-defining-haplogroup.sql  link-ena-sequence-files.py  mock-legacy.sql  nightly-maintenance.sh  oauth-dev.sh  patch-cutover-biosamples.py  publish-publication-linked-biosamples.sql  remove-test-credential-login.sql  resync-ybrowse.sh  seed-hallast-anchors.sql  seed-str-mutation-rates.sql  test-db.sh  yhrd-mutation-rates.txt
(+1124 files in other folders)
