[package]
name = "du-jobs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "decodingus-jobs"
path = "src/main.rs"

# Scheduled background workers (plan §7): publication update/discovery, YBrowse
# ingest, variant export, match discovery. Scheduler + job deps added on impl.
[dependencies]
du-db = { workspace = true }
du-bio = { workspace = true }
du-domain = { workspace = true }
du-external = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
# Paused-time scheduler tests.
tokio = { workspace = true, features = ["test-util"] }
