[package]
name = "du-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "decodingus-migrate"
path = "src/main.rs"

# Tree initialization: seed the Y tree from ISOGG, optionally merge the
# decoding-us production tree into it (uses the tree-merge engine + change sets).
[[bin]]
name = "decodingus-tree-init"
path = "src/bin/tree_init.rs"

# One-time ETL: legacy Postgres -> redesigned schema (plan §8). Idempotent,
# resumable, with a `--verify` reconciliation pass.
[dependencies]
du-domain = { workspace = true }
du-db = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
